bug fixes for linux and dim feature
fixed path separators when running in a linux env
add the dim feature
fixed some minors bugs

--- a/config/schemas.cfg
+++ b/config/schemas.cfg
@@ -3,10 +3,11 @@
 # Examples:
 # [schema_1]											# increment the number for each new schema
 # name = Schema name									# name of the schema
-# power = on											# on/off when the schema is activated
+# power = on											# on/off/dim when the schema is activated
 # devices = 1,2,3,4										# list of devices to manage by the schema
 # time = 10:00 											# 24h time format in local timezone
 # days = 0,1,2,3,4,5,6									# list of days to run the schema, 0 = monday - 6 = sunday
+# level = 60											# percentage of how much to dim when power is set to dim
 # condition = 1 >= 3.0 									# condition that has to be met before the schedule is activated (based on datasources)		def. [datasource name] [condition] [value] ex. 1 > 3.0
 #														# conditions: < > <= >= == !=
 #														# if there is need of eg. a span, you can use [datasource name] [condition] [value] [and|or] [datasource name] [condition] [value] ... n times
